# micro-pe

./: .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  scout-prd.md  vercel.json
scout/: .coverage  .env.example  .gitignore  .vercelignore  AGENT_LOOP_README.md  DEAL_SOURCING_RESEARCH_RESOURCES.md  DEVELOPER_TOOLS_APIS_RESEARCH.md  README.md  agent_loop.py  claude_caller.py  demo_ui.py  pyproject.toml  requirements.txt  test_agent_loop.sh  test_components.py  test_example_usage.py  vercel.json
scout/archive/: main.py
scout/config/: settings.py
scout/core/: base.py
scout/data/fdds/: TOMMY'S_EXPRESS_LLC_33915-202504-06.item19.txt
scout/data_sources/fdd/: aggregator.py  base.py  california.py  minnesota.py  nasaa_fred.py  wisconsin.py
scout/data_sources/maps/: google_maps.py  google_maps_scraper.py  google_reviews.py
scout/data_sources/marketplaces/: base.py  bizbuysell.py  pipeline.py  store.py  validation.py
scout/data_sources/sentiment/: reddit.py
scout/data_sources/shared/: __init__.py  base.py  config.py  errors.py
scout/docs/: AGENT_CONTAINER_IMPLEMENTATION_PLAN.md  AGENT_CONTAINER_RESEARCH.md  ARCHITECTURE_SIMPLIFIED.md  CONTRIBUTING.md  DATA_SOURCES.md  MANUAL_TESTING_GUIDE.md  PE_DEAL_SOURCING_RESEARCH.md  PLAN.md  PRODUCT.md  README.md  RESEARCH.md  SCRAPER_PRODUCT_SPEC.md  STATUS_REVIEW.md  TEST_COMMANDS.md  V0_CHECKLIST.md  architecture.md  prd.md  product_vision.md
scout/docs/_archive/: roadmap.md  ui-history-summary.md  v0-data-summary.md  v0-listings-summary.md
scout/docs/archive/: EXECUTION_PLAN.md  FINANCIAL_TERMINALS_RESEARCH.md  REDDIT_INSIGHTS_ROADMAP.md
scout/experiments/: README.md
scout/experiments/debug_html/: bizbuysell_debug.html  bizbuysell_search.html  ca_sos_results.html  carwash_page.html
scout/experiments/docs/: BIZBUYSELL_IMPROVEMENTS.md  BIZBUYSELL_WALKTHROUGH.md  SCRAPER_SOLUTION.md  deal_analysis_carwash_coalinga.md
scout/prds/: hvac_houston_tx_20260217.json
scout/ralph/: PROMPT.md  loop.sh  new_run.py  prd_utils.py
scout/scout/: __init__.py  config.py  main.py  operator_session.py
scout/scout.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scout/scrapers/: __init__.py  bizbuysell.py  google_maps.py
scout/scripts/: playground_bizbuysell.py  render_ui_exploration_screenshots.sh  validate_listings.py
scout/tests/: conftest.py  test_google_maps_integration.py  test_keyboard.py  test_terminal.py  test_ui_integration.py  test_wisconsin_fdd.py
scout/tools/: __init__.py  bizbuysell_tool.py  google_maps_tool.py  minnesota_fdd.py  wisconsin_fdd.py
scout/utils/: __init__.py  financials.py
(+195 files in other folders)
