[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scout"
version = "0.1.0"
description = "Terminal-based tool for researching small businesses"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "readchar>=4.0",
    "googlemaps>=4.10.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
    # Data pipeline V0 dependencies
    "selenium>=4.0.0",
    "beautifulsoup4>=4.11.0",
    "PyMuPDF>=1.21.0",
    "httpx>=0.24.0",
    "webdriver-manager>=4.0.0",
    "praw>=7.7.0",
    "textblob>=0.17.0",
    "nltk>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
scout = "scout.main:cli"

[tool.setuptools]
packages = [
    "scout",
    "scout.ui",
    "scout.domain",
    "scout.application",
    "scout.adapters",
    "scout.shared",
    "data_sources",
    "data_sources.shared",
    "data_sources.fdd",
    "data_sources.maps",
    "data_sources.marketplaces",
    "data_sources.sentiment",
    "data_sources.registry",
    "tools",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"
